code updated and added some .xml file

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,12 +8,16 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">34,362</td><td></td><td></td></tr>
+<tr><th colspan="8">CrossBrowser</th></tr>
+<tr><td><a href="#t0">Chrome_Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">13,203</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">Edge_Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">18,909</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">3</th><th class="num">0</th><th class="num">0</th><th class="num">0</th><th class="num">32,112</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.mystore.Testcases.EndToEnd_Test</td><td><a href="#m0">test</a></td><td rowspan="2">1736678032463</td><td rowspan="2">11724</td></tr><tr class="passedeven"><td><a href="#m1">test</a></td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">CrossBrowser</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Chrome_Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.mystore.Testcases.addtoCart_Test</td><td><a href="#m0">test</a></td><td rowspan="1">1736693521555</td><td rowspan="1">6633</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">Edge_Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.mystore.Testcases.loginPage_Test</td><td><a href="#m1">test</a></td><td rowspan="2">1736693522952</td><td rowspan="2">2548</td></tr><tr class="passedeven"><td><a href="#m2">test</a></td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.mystore.Testcases.EndToEnd_Test#test</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>nay@gmail.com</td><td>123</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.mystore.Testcases.EndToEnd_Test#test</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>nay2@gmail.com</td><td>12345</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Chrome_Test</h2><h3 id="m0">com.mystore.Testcases.addtoCart_Test#test</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Edge_Test</h2><h3 id="m1">com.mystore.Testcases.loginPage_Test#test</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>nay@gmail.com</td><td>123</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.mystore.Testcases.loginPage_Test#test</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>nay2@gmail.com</td><td>12345</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
