--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Suite" class="navigator-link ">
-                    <span>C:\Users\Nyamat\git\myStoreProject\MyStoreProject\testng_Smoke.xml</span>
+                    <span>C:\Users\Nyamat\git\myStoreProject\MyStoreProject\testngall.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -60,7 +60,7 @@
                 </li>
                 <li>
                   <a href="#" panel-name="group-Suite" class="navigator-link ">
-                    <span>2 groups</span>
+                    <span>3 groups</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">6 methods,   6 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -108,7 +108,7 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.mystore.Testcases.loginPage_Test" class="method navigator-link" hash-for-method="test(nay2@gmail.com, 12345)">test(nay2@gmail.com, 12345)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="com.mystore.Testcases.addtoCart_Test" class="method navigator-link" hash-for-method="test">test</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -118,7 +118,17 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.mystore.Testcases.addtoCart_Test" class="method navigator-link" hash-for-method="test">test</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="com.mystore.Testcases.loginPage_Test" class="method navigator-link" hash-for-method="test(nay2@gmail.com, 12345)">test(nay2@gmail.com, 12345)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="com.mystore.Testcases.EndToEnd_Test" class="method navigator-link" hash-for-method="test(nay@gmail.com, 123)">test(nay@gmail.com, 123)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="com.mystore.Testcases.EndToEnd_Test" class="method navigator-link" hash-for-method="test(nay2@gmail.com, 12345)">test(nay2@gmail.com, 12345)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -136,30 +146,6 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.mystore.Testcases.loginPage_Test</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="test(nay2@gmail.com, 12345)">
-                  </a> <!-- test(nay2@gmail.com, 12345) -->
-                  <span class="method-name">test</span>
-                  <span class="parameters">(nay2@gmail.com,12345)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="test(nay@gmail.com, 123)">
-                  </a> <!-- test(nay@gmail.com, 123) -->
-                  <span class="method-name">test</span>
-                  <span class="parameters">(nay@gmail.com,123)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Suite-class-passed -->
-          <div class="suite-Suite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
               <span class="class-name">com.mystore.Testcases.addtoCart_Test</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -168,6 +154,30 @@
                   <a name="test">
                   </a> <!-- test -->
                   <span class="method-name">test</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Suite-class-passed -->
+          <div class="suite-Suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">com.mystore.Testcases.EndToEnd_Test</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="test(nay@gmail.com, 123)">
+                  </a> <!-- test(nay@gmail.com, 123) -->
+                  <span class="method-name">test</span>
+                  <span class="parameters">(nay@gmail.com,123)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="test(nay2@gmail.com, 12345)">
+                  </a> <!-- test(nay2@gmail.com, 12345) -->
+                  <span class="method-name">test</span>
+                  <span class="parameters">(nay2@gmail.com,12345)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -187,10 +197,34 @@
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Suite-class-passed -->
+          <div class="suite-Suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">com.mystore.Testcases.loginPage_Test</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="test(nay@gmail.com, 123)">
+                  </a> <!-- test(nay@gmail.com, 123) -->
+                  <span class="method-name">test</span>
+                  <span class="parameters">(nay@gmail.com,123)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="test(nay2@gmail.com, 12345)">
+                  </a> <!-- test(nay2@gmail.com, 12345) -->
+                  <span class="method-name">test</span>
+                  <span class="parameters">(nay2@gmail.com,12345)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Suite-class-passed -->
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Nyamat\git\myStoreProject\MyStoreProject\testng_Smoke.xml</span>
+            <span class="header-content">C:\Users\Nyamat\git\myStoreProject\MyStoreProject\testngall.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -199,11 +233,6 @@
 &lt;suite name=&quot;Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Test_all&quot;&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;Chrome&quot;/&gt;
-    &lt;groups&gt;
-      &lt;run&gt;
-        &lt;include name=&quot;Smoke&quot;/&gt;
-      &lt;/run&gt;
-    &lt;/groups&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.mystore.Testcases.addtoCart_Test&quot;/&gt;
       &lt;class name=&quot;com.mystore.Testcases.loginPage_Test&quot;/&gt;
@@ -233,8 +262,20 @@
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="test-group">
+              <span class="test-group-name">Regression</span>
+              <br/>
+              <div class="method-in-group">
+                <span class="method-in-group-name">test</span>
+                <br/>
+              </div> <!-- method-in-group -->
+            </div> <!-- test-group -->
+            <div class="test-group">
               <span class="test-group-name">Sanity</span>
               <br/>
+              <div class="method-in-group">
+                <span class="method-in-group-name">homepage</span>
+                <br/>
+              </div> <!-- method-in-group -->
               <div class="method-in-group">
                 <span class="method-in-group-name">test</span>
                 <br/>
@@ -268,28 +309,36 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(6);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'test')
-data.setCell(0, 2, 'com.mystore.Testcases.addtoCart_Test')
-data.setCell(0, 3, 25432);
+data.setCell(0, 2, 'com.mystore.Testcases.EndToEnd_Test')
+data.setCell(0, 3, 23327);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'test')
-data.setCell(1, 2, 'com.mystore.Testcases.loginPage_Test')
-data.setCell(1, 3, 17362);
+data.setCell(1, 2, 'com.mystore.Testcases.EndToEnd_Test')
+data.setCell(1, 3, 23005);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'test')
-data.setCell(2, 2, 'com.mystore.Testcases.loginPage_Test')
-data.setCell(2, 3, 4543);
+data.setCell(2, 2, 'com.mystore.Testcases.addtoCart_Test')
+data.setCell(2, 3, 9678);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'homepage')
 data.setCell(3, 2, 'com.mystore.Testcases.homePage_Test')
-data.setCell(3, 3, 2668);
+data.setCell(3, 3, 5918);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'test')
+data.setCell(4, 2, 'com.mystore.Testcases.loginPage_Test')
+data.setCell(4, 3, 5774);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'test')
+data.setCell(5, 2, 'com.mystore.Testcases.loginPage_Test')
+data.setCell(5, 3, 5655);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 50 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -304,11 +353,11 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">4 ignored methods</span>
+            <span class="header-content">3 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
-              <span class="ignored-class-name">com.mystore.Testcases.loginPage_Test</span>
+              <span class="ignored-class-name">com.mystore.Testcases.EndToEnd_Test</span>
               <div class="ignored-methods-div">
                 <span class="ignored-method-name">loadconfig</span>
                 <br/>
@@ -322,11 +371,9 @@ return data;
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
             <div class="ignored-class-div">
-              <span class="ignored-class-name">com.mystore.Testcases.EndToEnd_Test</span>
+              <span class="ignored-class-name">com.mystore.Testcases.loginPage_Test</span>
               <div class="ignored-methods-div">
                 <span class="ignored-method-name">loadconfig</span>
-                <br/>
-                <span class="ignored-method-name">test</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -345,57 +392,84 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="configuration-method before">
                 <span class="method-name">setup(Chrome)</span>
-                <span class="method-start">54 ms</span>
+                <span class="method-start">143 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">test</span>
-                <span class="method-start">5858 ms</span>
+                <span class="method-start">6355 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">31301 ms</span>
+                <span class="method-start">16041 ms</span>
               </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.mystore.Testcases.loginPage_Test</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">setup(Chrome)</span>
-                <span class="method-start">33706 ms</span>
+                <span class="method-start">18757 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">test(nay@gmail.com, 123)</span>
-                <span class="method-start">39329 ms</span>
+                <span class="method-start">24931 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">teardown</span>
-                <span class="method-start">56691 ms</span>
+                <span class="method-name">teardown([TestResult name=test status=SUCCESS method=loginPage_Test.test(java.lang.String,java.lang.String)[p...)</span>
+                <span class="method-start">30713 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setup(Chrome)</span>
-                <span class="method-start">56976 ms</span>
+                <span class="method-start">31586 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">test(nay2@gmail.com, 12345)</span>
-                <span class="method-start">63206 ms</span>
+                <span class="method-start">37749 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">teardown</span>
-                <span class="method-start">67751 ms</span>
+                <span class="method-name">teardown([TestResult name=test status=SUCCESS method=loginPage_Test.test(java.lang.String,java.lang.String)[p...)</span>
+                <span class="method-start">43407 ms</span>
               </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.mystore.Testcases.homePage_Test</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">setup(Chrome)</span>
-                <span class="method-start">67955 ms</span>
+                <span class="method-start">44657 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">homepage</span>
-                <span class="method-start">72911 ms</span>
+                <span class="method-start">50766 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">75580 ms</span>
+                <span class="method-start">56684 ms</span>
+              </div> <!-- configuration-method after -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">com.mystore.Testcases.EndToEnd_Test</div> <!-- chronological-class-name -->
+              <div class="configuration-method before">
+                <span class="method-name">setup(Chrome)</span>
+                <span class="method-start">57735 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">test(nay@gmail.com, 123)</span>
+                <span class="method-start">62459 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">teardown</span>
+                <span class="method-start">85790 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setup(Chrome)</span>
+                <span class="method-start">86093 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">test(nay2@gmail.com, 12345)</span>
+                <span class="method-start">90862 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">teardown</span>
+                <span class="method-start">113867 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
